Simplify the testing a little bit
Signed-off-by: Artur Ciocanu <ciocanu@adobe.com>